@@ -34,6 +34,9 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
 * Issue #15: Fix atf_utils_{fork,wait} to support nested calls.
 
+* Issue #16: Fixed test failures (by removing a long-standing hack) on
+  systems that lack \e support in printf(1).
+
 * Issue #19: Removed stale references to atf-config and atf-run.
 
 
